--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -5,14 +5,14 @@
 
   <% @results.each do |type,res| %>
     <% res["noise"].each do |d| %>
-      <ellipse cx="<%= d[0] %>" cy="<%= d[1] %>" rx="<%= d[2] %>" ry="<%= d[3] %>" <%= type %>="-1" fill="#000000" stroke="black" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)" transform="rotate(<%= d[4] %>, <%= d[0] %>, <%= d[1] %>)"></ellipse>
+      <ellipse cx="<%= d["x"] %>" cy="<%= d["y"] %>" rx="<%= d["rx"] %>" ry="<%= d["ry"] %>" <%= type %>="-1" fill="#000000" stroke="black" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0" transform="rotate(<%= d["angle"] %>, <%= d["x"] %>, <%= d["y"] %>)"></ellipse>
     <% end %>
   <% end %>
 
   <% @results.each do |type,res| %>
     <% res["signal"].each do |k,arr| %>
       <% arr.each do |d| %>
-        <ellipse cx="<%= d[0] %>" cy="<%= d[1] %>" rx="<%= d[2] %>" ry="<%= d[3] %>" <%= type %>="<%= k %>" fill="#000000" stroke="white" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0);" transform="rotate(<%= d[4] %>, <%= d[0] %>, <%= d[1] %>)"></ellipse>
+        <ellipse cx="<%= d["x"] %>" cy="<%= d["y"] %>" rx="<%= d["rx"] %>" ry="<%= d["ry"] %>" <%= type %>="<%= k %>" fill="#000000" stroke="white" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0"  transform="rotate(<%= d["angle"] %>, <%= d["x"] %>, <%= d["y"] %>)"></ellipse>
       <% end %>
     <% end %>
   <% end %>
@@ -20,7 +20,8 @@
   <% @results.each do |type,res| %>
     <% count = 0 %>
     <% res["reduced"].each do |d| %>
-      <ellipse cx="<%= d[0] %>" cy="<%= d[1] %>" rx="<%= d[2] %>" ry="<%= d[3] %>" fill="#000000" stroke="<%= @hex[type] %>" fill-opacity="0.25" stroke-width="2" tabindex="0" opacity="0.9" style="-webkit-tap-highlight-color: rgba(0, 0, 0, 0)" transform="rotate(<%= d[4] %>, <%= d[0] %>, <%= d[1] %>)" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity', '0');" ></ellipse>
+      <ellipse cx="<%= d["x"] %>" cy="<%= d["y"] %>" rx="<%= d["rx"] %>" ry="<%= d["ry"] %>" fill="#000000" stroke="white" fill-opacity="0" stroke-width="4" tabindex="0" opacity="0.5" transform="rotate(<%= d["angle"] %>, <%= d["x"] %>, <%= d["y"] %>)" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity', '0');" ></ellipse>
+      <ellipse cx="<%= d["x"] %>" cy="<%= d["y"] %>" rx="<%= d["rx"] %>" ry="<%= d["ry"] %>" fill="#000000" stroke="<%= @hex[type] %>" fill-opacity="0" stroke-width="2" tabindex="0" opacity="1.0" transform="rotate(<%= d["angle"] %>, <%= d["x"] %>, <%= d["y"] %>)" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type %>=<%= count %>]').css('opacity', '0');" ></ellipse>
       <% count+=1 %>
     <% end %>
   <% end %>
@@ -35,6 +36,9 @@
 </div>
 <div id="computed-info">
     <ul>
-        <li><span class="key">Volunteers</span>: <%= @s.classification_count %></li>
+        <li><span class="key">Volunteers</span>: <%= @s.classification_count %> (<%= @s.user_names.join(", ") %>)</li>
+        <% @types.each do |k,v| %>
+        <li><span class="key"><%= k %></span>: <%= @results[v].map{|k,a|a.size}.sum %> raw, <%= @results[v]["reduced"].size %> reduced from <%= @results[v]["signal"].map{|k,a| a.size}.sum %> candidates</li>
+        <% end %>
     </ul>
 </div>
