--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,12 @@
 <html>
 <head>
   <title>Milk Man</title>
-  <murl description="<%= ENV['MONGOHQ_URL'] %>"></murl>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
-
+<p><%= ENV['MONGOHQ_URL'] %></p>
 <%= yield %>
 
 </body>
