Increase timeout, remove username lost
Speedy speedy

--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -44,7 +44,7 @@
           <% end %>
         </ul>
         <ul>
-          <li><span class="key">Volunteers</span>: <%= @s.classification_count %> (<%= @s.user_names.join(", ") %>)</li>
+          <li><span class="key">Volunteers</span>: <%= @s.classification_count %></li>
       </ul>
   </div>
 </div>
