DBSCAN EPS change
And styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
 
 </head>
 <body>
-<h1>Milk Man</h1>
+<h1><a href="/">Milk Man</a></h1>
 <h3>Data delivery for the Milky Way Project.</h3>
 
-<div id="search-buttons"
+<div id="search-buttons">
   <input type="textbox" id="searchID" value="e.g. AMW0002t48" onfocus="$('#searchID').val('');" onblur="$('#searchID').filter(function() { return $(this).val() == ''; }).val('e.g. AMW0002t48');" />
   <button id="searchButton" type="submit">Search</button>
   <button id="randomButton" type="submit">Random</button>
