--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,11 @@
+body {
+
+}
+
+a {
+  text-decoration: none;
+}
+
 #simbad-objects {
   display: none;
 }
@@ -16,14 +24,52 @@
 }
 
 h1, h2, h3 {
-  display: inline-block;
+  margin: 10px 0 5px 0;
 }
 
 #search-buttons {
     display: inline-block;
+    margin: 0 0 10px 0;
 }
 
 
 #search-buttons button {
     display: inline-block;
+}
+
+#randomButton {
+  margin-left: 10px;
+  background: #2D9776;
+}
+
+div.preview-holder {
+  display: inline-block;
+  margin: 0 15px 10px 0;
+  position: relative;
+}
+
+.preview-link {
+  position: absolute;
+  top: 50%;
+  margin: -16px 0 0 0px;
+  right: -16px;
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  border: 2px solid white;
+  text-decoration: none;
+  line-height: 30px;
+  text-align: center;
+  font-size: 18px;
+  background-color: #3c8999;
+  color: #ffffff;
+}
+
+#footer {
+  clear: both;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #444;
+  margin: 15px auto;
 }
