--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -70,5 +70,5 @@ div.preview-holder {
   text-transform: uppercase;
   font-size: 14px;
   color: #444;
-  margin: 15px auto;
+  margin: 20px auto 10px;
 }
