--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -41,6 +41,11 @@ h1, h2, h3 {
   background: #43be8b;
 }
 
+#randomButton:hover {
+  background: #48E29E;
+}
+
+
 div.preview-holder {
   display: inline-block;
   margin: 0 15px 10px 0;
@@ -62,6 +67,11 @@ div.preview-holder {
   font-size: 18px;
   background-color: #3c8999;
   color: #ffffff;
+  -webkit-transition:background .2s;-moz-transition:background .2s;-o-transition:background .2s;-ms-transition:background .2s;transition:background .2s;
+}
+
+.preview-link:hover{
+  background-color: #4BBAC5;
 }
 
 #footer {
