--- a/app/views/subjects/simbad.html.erb
+++ b/app/views/subjects/simbad.html.erb
@@ -6,7 +6,7 @@
   <% count=0 %>
   <% @simbad.each do |d| %>
       <text fill="#ffffff" stroke="none" name="simbad-<%= count %>" font="10px &quot;Arial&quot;" text-anchor="middle" y="<%= d["y"]*scale %>" x="<%= (d["x"]+16)*scale %>" style="text-anchor: middle; font: 10px &quot;Arial&quot;; display: none;"><%= d["object_name"] %></text>
-      <circle cx="<%= d["x"]*scale %>" cy="<%= d["y"]*scale %>" r="<%= 10*scale %>" name="simbad-<%= count %>" fill="#ffffff" stroke="white" fill-opacity="0.25" stroke-width="<%= 3*scale %>" tabindex="0" opacity="0.5" onmouseover="$('[name=simbad-<%= count %>]').css('display', 'block');" onmouseout="$('text[name=simbad-<%= count %>]').css('display', 'none'); $('circle[name=simbad-<%= count %>]').css('opacity', '0.5');"></circle>
+      <circle cx="<%= (d["x"]-5)*scale %>" cy="<%= (d["y"]-5)*scale %>" r="<%= 10*scale %>" name="simbad-<%= count %>" fill="#ffffff" stroke="white" fill-opacity="0.25" stroke-width="<%= 3*scale %>" tabindex="0" opacity="0.5" onmouseover="$('[name=simbad-<%= count %>]').css('display', 'block');" onmouseout="$('text[name=simbad-<%= count %>]').css('display', 'none'); $('circle[name=simbad-<%= count %>]').css('opacity', '0.5');"></circle>
   <% count+=1 %>
   <% end %>
   <text fill="#ffffff" stroke="none" font="10px &quot;Arial&quot;" text-anchor="left" y="<%= 384*scale %>" x="<%= 10*scale %>" >SIMBAD Results (Untested)</text>
