Results collection, Project config
Moving cached results into own collection to avoid re-processing every
time DB is bumped
Added project-specific params to config file (first step to
generalising code for all Ouroboros projects)
Flipped SIMBAD y-coord as it seems to be incorrect.
Removed ‘examples’ endpoint which does nothing.

--- a/app/views/subjects/examples.html.erb
+++ b/app/views/subjects/examples.html.erb
@@ -1,5 +1,7 @@
 <% width = 800.0 %>
 <% height = 400.0 %>
+<% @hex =  Milkman::Application.config.hex %>
+<% @types = Milkman::Application.config.types %>
 
 <% @display.each do |id, results| %>
 <% s = Subject.find_by_zooniverse_id(id) %>
