--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -10,17 +10,12 @@
         <li><span class="key">Size</span>: <%= @s.metadata["size"] %></li>
         <li><span class="key">Volunteers</span>: <%= @s.classification_count %></li>
         <li><span class="key">Talk</span>: <a href="http://talk.milkywayproject.org/#/subjects/<%= @s.zooniverse_id %>" target="_blank"><%= @s.zooniverse_id %></a></li>
+        <li><span class="key"><%= @s.dr1 ? "DR1" : "DR2" %></span></li>
         <span class="stretch"></span></ul>
 </div>
 <div id="maps">
   <svg height="<%= height %>" version="1.1" width="<%= width %>" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 <%= width %> <%= height %>" preserveAspectRatio="xMinYMin" style="overflow: hidden; position: relative;">
     <image xlink:href="<%= @s.image %>" preserveAspectRatio="xMidYMid meet" width="<%= width %>" height="<%= height %>"/>
-
-    <% @results.each do |type,res| %>
-      <% res["noise"].each do |d| %>
-        <ellipse cx="<%= d["x"]*scale %>" cy="<%= d["y"]*scale %>" rx="<%= d["rx"]*scale %>" ry="<%= d["ry"]*scale %>" <%= type %>="-1" fill="#000000" stroke="black" fill-opacity="0" stroke-width="2" tabindex="0" opacity="0" transform="rotate(<%= d["angle"] %>, <%= d["x"]*scale %>, <%= d["y"]*scale %>)"></ellipse>
-      <% end %>
-    <% end %>
 
     <% @results.each do |type,res| %>
       <% res["signal"].each do |k,arr| %>
@@ -55,23 +50,23 @@
           <td>PA/&deg;</td>
         </tr>
         <% row=0 %>
-        <% @types.each do |k,v| %>
         <% count = 0 %>
-          <% @results[v]["reduced"].each do |a| %>
-          <% row+=1 %>
-            <tr class="<%= row%2==0 ? "even" : "odd" %>" onmouseover="$('[<%= v %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= v
-              %>=<%= count %>]').css('opacity', '0');">
-              <td> <%= k %></td>
-              <td> <%= sprintf "%.4f", a["glon"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglon"] %></td>
-              <td> <%= sprintf "%.4f", a["glat"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglat"] %></td>
-              <td> <%= sprintf "%.1f", a["x"] %> &plusmn; <%= sprintf "%.1f", a["quality"]["qx"] %></td>
-              <td> <%= sprintf "%.1f", a["y"] %> &plusmn; <%= sprintf "%.1f", a["quality"]["qy"] %></td>
-              <td> <%= sprintf "%.1f", a["rx"] %></td>
-              <td> <%= sprintf "%.1f", a["ry"] %></td>
-              <td> <%= sprintf "%.1f", a["angle"] %></td>
-            </tr>
-            <% count+=1 %>
-          <% end %>
+         <% @results.each do |type,res| %>
+        <% res["reduced"].each do |a| %>
+        <% row+=1 %>
+          <tr class="<%= row%2==0 ? "even" : "odd" %>" onmouseover="$('[<%= type %>=<%= count %>]').css('opacity', '0.5');" onmouseout="$('[<%= type
+            %>=<%= count %>]').css('opacity', '0');">
+            <td> <%= @types.index(type) %></td>
+            <td> <%= sprintf "%.4f", a["glon"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglon"] %></td>
+            <td> <%= sprintf "%.4f", a["glat"] %> &plusmn; <%= sprintf "%.4f", a["quality"]["qglat"] %></td>
+            <td> <%= sprintf "%.1f", a["x"] %> &plusmn; <%= sprintf "%.1f", a["quality"]["qx"] %></td>
+            <td> <%= sprintf "%.1f", a["y"] %> &plusmn; <%= sprintf "%.1f", a["quality"]["qy"] %></td>
+            <td> <%= sprintf "%.1f", a["rx"] %></td>
+            <td> <%= sprintf "%.1f", a["ry"] %></td>
+            <td> <%= sprintf "%.1f", a["angle"] %></td>
+          </tr>
+          <% count+=1 %>
+        <% end %>
         <% end %>
       </table>
       <div style="clear:both;"></div>
